ApiName is enumeration instead of String